Endkorrektur Website, 1. Teil :)

--- a/templates/craft_sicherungWebsite/templates/projekte/programme.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme.html
@@ -6,22 +6,13 @@
 {{ entry.titelfeldFuerJens }}
 {% endblock %}
 
-{% block headerbildPosition1 %}
-
-<div class="container-fluid no-padding" style="padding-top: 70px;">
-  <img class="img-fluid w-100" src=" {{ craft.assets.filename('chance-projekte-header.jpg').one().getUrl() }}" style="padding-bottom: 0;">
-</div>
-
-
-{% endblock %}
 
 {% block block1 %}
 
 
-
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 4rem; position: relative;">
 
-  <nav aria-label="breadcrumb" id="info">
+  <nav aria-label="breadcrumb" id="info" style="padding-top: 3rem; margin-bottom: 0;">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
     <li class="breadcrumb-item"> Programme </li>
