--- a/templates/craft_sicherungWebsite/templates/index.html
+++ b/templates/craft_sicherungWebsite/templates/index.html
@@ -11,7 +11,6 @@
 
 <div class="container-fluid text-center no-padding" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
-
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
   <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
@@ -24,7 +23,7 @@
   </div>
 </div>
 
-  <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
+<img class="img-fluid mx-auto d-block" id="headerbild" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
 
   <div class="container achterspaltenlayout" id="video">
 
@@ -64,9 +63,9 @@
 
 </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; height: 240px; padding: 0;">
 
-  <div class="container achterspaltenlayout text-center">
+  <div class="container achterspaltenlayout text-center" style="padding: 0; position: relative; top: 50%; transform: translateY(-50%);">
     {% set entries = craft.entries.section('home').slug('zitate-home').one().children().all() %}
     {% set entry = random(entries) %}
 
@@ -77,26 +76,20 @@
 
     {% set entry = random(entries) %}
     <script> /*Zufälliges Zitat nach 3 Sekunden ändern */
-    $(document).ready(function(){
-      setInterval(function(){ $("#zitat").replaceWith("<div id=\"zitat\"> {{ entry.anleser }} </div>") }, 16000);
-      setInterval(function(){ $("#autor").replaceWith("<div id=\"autor\"> {{ entry.title }} </div>") }, 16000);
-    });
+    var zitate = [];
+    var autoren = [];
+    {% for entry in entries %} //Alle Zitate werden in ein Feld kopiert aus Craft
+      zitate.push('{{ entry.anleser}}')
+      autoren.push('{{ entry.title}}')
+    {% endfor %}
 
     $(document).ready(function(){
-      setInterval(function(){ $("#zitat").replaceWith("<div id=\"zitat\"> {{ entry.anleser }} </div>") }, 4000);
-      setInterval(function(){ $("#autor").replaceWith("<div id=\"autor\"> {{ entry.title }} </div>") }, 4000);
-    });
-
-    {% set entry = random(entries) %}
-    $(document).ready(function(){
-      setInterval(function(){ $("#zitat").replaceWith("<div id=\"zitat\"> {{ entry.anleser }} </div>") }, 8000);
-      setInterval(function(){ $("#autor").replaceWith("<div id=\"autor\"> {{ entry.title }} </div>") }, 8000);
-    });
-
-    {% set entry = random(entries) %}
-    $(document).ready(function(){
-      setInterval(function(){ $("#zitat").replaceWith("<div id=\"zitat\"> {{ entry.anleser }} </div>") }, 12000);
-      setInterval(function(){ $("#autor").replaceWith("<div id=\"autor\"> {{ entry.title }} </div>") }, 12000);
+      var zufallszahl;
+      setInterval(function(){
+          zufallszahl = Math.floor(Math.random()*autoren.length);
+       }, 5000);
+       setInterval(function(){ $("#zitat").replaceWith("<div id=\"zitat\">" + zitate[zufallszahl]) + "</div>" }, 6000);
+      setInterval(function(){ $("#autor").replaceWith("<div id=\"autor\">" + autoren[zufallszahl]) + "</div>" }, 6000);
     });
     </script>
 
@@ -110,6 +103,16 @@
     <h2> {{ entry.title }} </h2>
   </div>
 
+  <style>
+    .stylevorgaben2 .reiter {
+      width: 30%;
+      font-size: 12px;
+      height: 35px;
+      margin-top: -35px;
+      margin-left: 15px;
+    }
+  </style>
+
   <div class="row">
 
     {% set entries = craft.entries.section('projektberichte').all() %}
@@ -117,6 +120,7 @@
     <div class="col-md-4" style="padding-bottom: 50px;">
     <div class="card border-light h-100">
       <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+      <button class="btn btn-primary reiter" role="button">Projektbericht</button>
       <div class="card-body">
           <h3>{{ entry.title }}</h3>
           <div id="copy"> {{ entry.anleser }} </div>
@@ -129,6 +133,7 @@
     <div class="col-md-4" style="padding-bottom: 50px;">
     <div class="card border-light h-100">
       <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+      <button class="btn btn-primary reiter" role="button">Projektbericht</button>
       <div class="card-body">
           <h3>{{ entry.title }}</h3>
           <div id="copy"> {{ entry.anleser }} </div>
@@ -136,10 +141,12 @@
     </div>
   </div>
 
+  {% set entries = craft.entries.section('blog').level('1').all() %}
     {% set entry = random(entries) %}
     <div class="col-md-4" style="padding-bottom: 50px;">
     <div class="card border-light h-100">
       <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+      <button class="btn btn-primary reiter" role="button">Blogeintrag</button>
       <div class="card-body">
           <h3>{{ entry.title }}</h3>
           <div id="copy"> {{ entry.anleser }} </div>
