--- a/templates/craft_sicherungWebsite/templates/spenden/spende.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/spende.html
@@ -61,20 +61,56 @@
 
     <div class="row">
       <div class="col-sm-6">
-
         <div class="form-group" style="padding-top: 3rem;">
-          <label for="sel1">Verwendungszweck</label>
+          <label for="sel1" id="copy">Verwendungszweck</label>
           <select class="form-control" id="sel1" name="zweck" style="height: auto;">
-            <option>Spende Allgemein</option>
-            <option>Spende Programmbezogen</option>
-            <option>3</option>
-            <option>4</option>
+            <option>Allgemein Spenden</option>
+            <option>Peru</option>
+            <option>Kenia</option>
+            <option>Dorfpate Peru</option>
+            <option>Dorfpate Kenia</option>
+            <option>Naturschutz Peru</option>
+            <option>Kinderpate Peru</option>
+            <option>Kinderpate Kenia</option>
           </select>
         </div>
       </div>
 
-      <div class="col-sm-6">  </div>
+      <script> //Script um das passende Spendenfeld auszuwählen
+      $(function() {
+      var welcheSpende =  '{{ craft.request.getQueryStringWithoutPath() }}';
+      welcheSpende = welcheSpende.replace('spendenart=', '');
+      welcheSpende = welcheSpende.replace('%20', ' ');       welcheSpende = welcheSpende.replace('*', '');
 
+      if (welcheSpende.match(/Allgemein/)) {
+        $('#sel1').val('Allgemein Spenden'); }
+
+      if (welcheSpende == 'Peru') {
+          $('#sel1').val('Peru'); }
+
+      if (welcheSpende == 'Kenia') {
+          $('#sel1').val('Kenia'); }
+
+      if (welcheSpende.match(/rfer Peru/)) {
+          $('#sel1').val('Dorfpate Peru'); }
+
+      if (welcheSpende.match(/rfer Kenia/)) {
+          $('#sel1').val('Dorfpate Kenia'); }
+
+      if (welcheSpende.match(/Naturschutz Peru/)) {
+        $('#sel1').val('Naturschutz Peru'); }
+
+      if (welcheSpende.match(/Kinderpate Peru/)) {
+        $('#sel1').val('Kinderpate Peru'); }
+
+      if (welcheSpende.match(/Kinderpate Kenia/)) {
+        $('#sel1').val('Kinderpate Kenia'); }
+
+        console.log(welcheSpende);
+      });
+      </script>
+
+      <div class="col-sm-6">  </div>
       <div class="col-sm-6">
         <div class="form-group">
           <label for="usr">Name der Bank</label>
