--- a/templates/craft_sicherungWebsite/templates/ueberUns/konzept.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/konzept.html
@@ -19,9 +19,9 @@
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
-<div class="container achterspaltenlayout" style="position: relative;">  <div style="padding-bottom:3rem; ">
+<div class="container achterspaltenlayout" style="position: relative; padding-bottom: 0;">  <div style="padding-bottom:3rem; ">
 
-    <h1> Die Arbeit von Chance e.V. ist christlich, sozial und ökologisch </h1>
+    <h1 style="padding-bottom: 2rem;"> Die Arbeit von Chance e.V. ist christlich, sozial und ökologisch </h1>
     <p id="anleser"> Sie beruht auf drei Prinzipien, die den Rahmen und die Natur unseres Engagements in allen seinen Aspekten bestimmen. </p>
     </div>
   </div>
