weitermachen mit den korrekturen

--- a/templates/craft_sicherungWebsite/templates/index.html
+++ b/templates/craft_sicherungWebsite/templates/index.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<img class="img-fluid mx-auto d-block" id="headerbild" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
+<img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
 
   <div class="container achterspaltenlayout" id="video">
 
