--- a/templates/craft_sicherungWebsite/templates/projekte/index.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/index.html
@@ -8,8 +8,8 @@
 
 {% block headerbildPosition1 %}
 
-<div class="container-fluid no-padding" style="padding-top: 70px;">
-  <img class="img-fluid w-100" src=" {{ craft.assets.filename('chance-projekte-header.jpg').one().getUrl() }} " style="padding-bottom: 0;">
+<div class="container-fluid no-padding" style="padding-top: 5rem;">
+  <img class="img-fluid" id="headerbild" style="padding-bottom: 0;" src="{{ craft.assets.filename('chance-projekte-header.jpg').one().getUrl() }}">
 </div>
 
 
@@ -48,7 +48,7 @@
 
           {% for entry in entries %}  {% if entry.slug != 'blick' %}
           {% set counter = counter + 1 %}
-          <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 50px;">
+          <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px; padding-right: 5px; padding-left: 5px;">
 
           <div class="card border-light h-100">
             <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
