--- a/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -127,9 +127,24 @@
       {% endif %}
 
 <style> /* Einfärben der horizontal ruler in weiß */
-  hr {
+  .stylevorgaben2 hr {
     border-color: white;
+    opacity: .5;
   }
+
+.stylevorgaben2 .nav-link.active.tab { /*Die Tabs entsprechend anpassen der beiden Grafiken */
+      background-color: #f8f5f2;
+      color: #0062ae;
+      margin: 0;
+  }
+
+  .stylevorgaben2 .nav-link.tab {
+        color: #0062ae;
+        margin: 0;
+        font-weight: bold;
+        padding: .7rem 4rem;
+    }
+
 </style>
 
     </div>
@@ -170,9 +185,9 @@
     <a class="nav-link tab" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Kenia</a>
   </li>
 </ul>
-<div class="container zwoelferspaltenlayout" style="padding-top: 0; padding-bottom: 2rem;">
+<div class="container zwoelferspaltenlayout" style="padding-top: 0;">
 
-<div class="tab-content" id="pills-tabContent">
+<div class="tab-content" id="pills-tabContent" style="padding-top: 5rem; padding-bottom: 5rem;">
   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
     <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
 </div>
@@ -193,7 +208,7 @@
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 
 
-<div class="container-fluid no-padding" style="background-color: white;" id="indigen">
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 1rem;" id="indigen">
   <div class="container achterspaltenlayout text-center">
     {% set entry = craft.entries.section('projekte').slug('warum-indigene-gemeinschaften').one() %}
 
@@ -203,8 +218,8 @@
 
     <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
       <div class="row">
-        <div class="col-md-8">  <div id="copy">{{ entry.text }}  </div>  </div>
-        <div class="col-md-4" style="border-left:2px solid #ed6e2c; height: 40%; margin-top: 15px;">
+        <div class="col-md-9">  <div id="copy">{{ entry.text }}  </div>  </div>
+        <div class="col-md-3" style="border-left:2px solid #ed6e2c; height: 40%; margin-top: 15px;">
               {% set entries = craft.entries.section('projekte').slug('erfahren-sie-mehr-1').one().children().all() %}
               {% set eintrag = random(entries) %}
               <img style="max-height: 100px;" class="rounded-circle" src="{% if eintrag.bild.one() is not null %} {{ eintrag.bild.one().url }}{% endif %}" alt="">
@@ -216,36 +231,17 @@
   </div> <!-- Warum indigene Gemeinschaften -->
 
   <div class="container zwoelferspaltenlayout text-center">
-    {% set entry = craft.entries.section('projekte').slug('patenschaft').one() %}
-    <hr style="border:none; height:2px; background-color:grey; margin-bottom: 2rem; margin-top: 1rem;">
+    <hr style="border:none; height:1px; background-color:grey; margin-bottom: 2rem; margin-top: 1rem;">
 
      <div id="anleser"> Lernen Sie unsere weiteren Progamme kennen </div>
   </div>
 
-  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
-  <div class="row">
-    <div class="col-md-4">
-      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-    </div>
-    <div class="col-md-8" style="padding-top: 2rem;">
-      <h3> {{ entry.title }} </h3>
-      <div id="copy"> {{ entry.text }}</div>
-    </div>
-  </div>
-  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+  {% set entry = craft.entries.section('projekte').slug('patenschaft').one() %}
+  {% include "_layouts/weiterleitungmitzeilenumbruch" %}
 
   {% set entry = craft.entries.section('projekte').slug('naturschutz').one() %}
-  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
-  <div class="row">
-    <div class="col-md-4">
-      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-    </div>
-    <div class="col-md-8" style="padding-top: 2rem;">
-      <h3> {{ entry.title }} </h3>
-      <div id="copy"> {{ entry.text }}</div>
-    </div>
-  </div>
-  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+  {% include "_layouts/weiterleitungmitzeilenumbruch" %}
+
 
 </div>
 
