--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/erfahrungsberichtlang.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/erfahrungsberichtlang.html
@@ -8,11 +8,19 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
+<div class="container-fluid text-center" style="padding-top: 9rem; position: relative;">
 
-<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <nav aria-label="breadcrumb" id="info">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+      <li class="breadcrumb-item"> Erfahrungsberichte </li>
+    </ol>
+  </nav>
 
-<div class="container achterspaltenlayout" style="padding-bottom: 0;">
+
+<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
+
+  <div class="container achterspaltenlayout" style="position: relative;">
   <h1> {{ entry.title }} </h1>
   <span id="anleser"> <strong> {{ entry.beruf }}</strong> </span>
     <div id="anleser"> {{ entry.anleser }}</div>
@@ -31,12 +39,15 @@
 <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
   <hr> <div id="copy" class="text-center" style="padding-bottom: 3rem; padding-top: 1rem;"> Weitere Erfahrungsberichte  </div>
 
+  {% set aktuellerTitle = entry.slug %}
+
 <div class="card-columns">
 
   {% set entries = craft.entries.section('erfahrungsberichte').all() %}
 
       {% for entry in entries %}
-      <div class="card">
+        {% if entry.slug != aktuellerTitle %}
+      <div class="card" style="border: 0;">
             <div class="row">
               <div class="col-4" style="text-align: center; white-space: nowrap;">
                  <span class="helper" style="display: inline-block; height: 100%; vertical-align: middle;"></span>
@@ -54,7 +65,7 @@
             </div>
           </div>
         </div>
-
+        {% endif %} {# Damit der aktuelle TItle nicht angezeigt wird #}
       {% endfor %}
   </div>
 </div>
@@ -72,6 +83,17 @@
     </div>
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
+
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 3rem;">
+
+  <div class="container zwoelferspaltenlayout text-center">
+   <div id="anleser" style="padding-bottom: 3rem;"> Erfahren Sie mehr über unsere Projekte vor Ort </div>
+  </div>
+
+  {% set entry = craft.entries.section('projekte').slug('projektberichte').one() %}
+  {% include "_layouts/weiterleitungkorrekt" %}
+
+</div> <!-- Weißer Hintergrundcontainer -->
 
 
 {% endblock %}
