--- a/templates/craft_sicherungWebsite/templates/projekte/index.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/index.html
@@ -9,7 +9,7 @@
 {% block headerbildPosition1 %}
 
 <div class="container-fluid no-padding" style="padding-top: 5rem;">
-  <img class="img-fluid" id="headerbild" style="padding-bottom: 0;" src="{{ craft.assets.filename('chance-projekte-header.jpg').one().getUrl() }}">
+  <img id="headerbild" style="padding-bottom: 0;" src="{{ craft.assets.filename('chance-projekte-header.jpg').one().getUrl() }}">
 </div>
 
 
