--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/projektberichtlang.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/projektberichtlang.html
@@ -8,68 +8,70 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
+<div class="container-fluid text-center" style="padding-top: 8rem; position: relative;">
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> Projektberichte </li>
+  </ol>
+</nav>
 
-  <div class="container achterspaltenlayout">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
+
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
     <div id="anleser"> {{ entry.anleserLang }}</div>
   </div>
 </div>
 
-<div class="container zwoelferspaltenlayout">
-  <div class="row"> <!-- row für das gesamte Layout der Seite -->
-    <div class="col-sm-2">  </div>
+<style>
 
-    <div class="col-sm-10">
-      <div class="row">
-      <div class="col-md-8">
-        <div id="copy">{{ entry.textNebenErfahrungsbericht }} </div>
-      </div>
+    @media all and (max-width: 1200px) {
+      .stylevorgaben2 #erfahrungsbericht {
+        display: none;
+      }
+    }
+</style>
 
-      <div class="col-md-4" style="border-left:2px solid #ed6e2c; height: 40%;">
+<div class="container achterspaltenlayout">
+  <img class="img-fluid mx-auto d-block" style="padding-bottom: 5rem; position: relative;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+
+      <div id="erfahrungsbericht" class="float-right" style="border-left:2px solid #ed6e2c; width: 40%; margin-left: 3rem; margin-right: -25%; margin-bottom: 3rem;">
         {% set entries = craft.entries.section('projekte').slug('erfahren-sie-mehr-1').one().children().all() %}
         {% set eintrag = random(entries) %}
+        <div class="helper" style="padding-left: 1rem;"> <!-- Div zum Abstand setzen -->
         <img style="max-height: 100px;" class="rounded-circle" src="{% if eintrag.bild.one() is not null %} {{ eintrag.bild.one().url }}{% endif %}" alt="">
         <p style="padding-top: 2rem;" id="copy"> Erfahrungsbericht </p>
         <div id="zitat"> {{ eintrag.text }}  </div>
         <div id="autor" > {{ eintrag.zusatzfeld1 }}  </div>
-      </div>
-      </div>
+        </div>
     </div>
 
-  </div>
 
-<div class="row" style="padding-top: 3rem;">
-  <div class="col-sm-2">  </div>
-  <div class="col-sm-8">
   <div id="copy">{{ entry.restlichertext }} </div>
-</div>
-
-</div>
-
 </div>
 
 
 <div class="container zwoelferspaltenlayout">
 
   <hr> <p class="text-center" id="anleser" style="padding-top: 2rem;"> Weitere Projektberichte</p>
-  {% set slugUrsprung = entry.slug |replace({'-lang': ''}) %}
+  {% set slugUrsprung = entry.slug %}
 
   <div class="card-columns">
 
     {% set entries = craft.entries.section('projektberichte').all() %}
-    {% for entry in entries %}
+    {% for entry in entries %} {% if slugUrsprung != entry.slug %}
 
     <div class="card">
       <div class="card-body" style="padding: .5rem;">
         <p class="card-text">
           <h4 style="margin: 0;"> {{ entry.title }} </h4>
-          <div id="copy"> {{ entry.nurDerLink }} </div>
+          <a id="copy" href="{{ 'https://aufbau-website.de/craft/web/projekte/projektberichte/' ~ entry.slug }}"> {{ entry.nurDerLink }}</a>
         </p>
       </div>
     </div>
 
+    {% endif %}
     {% endfor %}
   </div>
 </div> <!-- Die restlichen Projektberichte -->
@@ -96,18 +98,7 @@
 </div>
 
 {% set entry = craft.entries.section('spendenfelderUndSo').slug('fuer-sie').one() %}
-
-<div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
-<div class="row">
-  <div class="col-md-4" style="padding: 0;">
-    <img class="img-fluid mx-auto d-block" style="padding-bottom: 0px; max-height: 200px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
-  </div>
-  <div class="col-md-8" style="padding-top: 2rem; padding-left: 30px;">
-    <h3> Für Sie </h3>
-    <div id="copy"> {{ entry.text }}  </div>
-  </div>
-</div>
-</div> <!-- Weitere Informationen zum Konzept -->
+{% include '_layouts/weiterleitungkorrekt' %}
 
 </div>
 
