--- a/templates/craft_sicherungWebsite/templates/projekte/projektberichte.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/projektberichte.html
@@ -39,9 +39,10 @@
         <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px; padding-left: 5px; padding-right: 5px;">
         <div class="card border-light h-100">
           <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
-          <div class="card-body">
+          <div id="copy" class="card-body">
               <h3>{{ entry.title }}</h3>
-              <div id="copy"> {{ entry.anleser }} </div>
+              <div> {{ entry.anleser }} </div>
+              <a href="{{ 'https://aufbau-website.de/craft/web/projekte/projektberichte/' ~ entry.slug }}"> {{ entry.nurDerLink }}</a>
           </div>
         </div>
       </div>
@@ -58,7 +59,7 @@
 
       {% set entry = craft.entries.section('spendenfelderUndSo').slug('fuer-sie').one() %}
       {% include '_layouts/weiterleitungkorrekt' %}
-      
+
     </div> <!-- Weißer Hintergrundcontainer -->
 
 
